// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionData renders a truncated token id for an NFT with a long token id 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="advanced-details-data-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 4px; top: 2px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--padding-right-6 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Data
          </p>
        </div>
      </div>
      <div
        class="mm-box"
      />
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="advanced-details-data-function"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Function
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-39"
              class=""
              data-original-title="See {IERC1155-safeTransferFrom}."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="advanced-details-data-function-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          safeTransferFrom
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-left-2"
      data-testid="advanced-details-safeTransferFrom-params"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="advanced-details-data-param-0"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              From
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-40"
                class=""
                data-original-title="address"
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="advanced-details-data-param-0-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0xDc477...0c164
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="advanced-details-data-param-1"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              To
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-41"
                class=""
                data-original-title="address"
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="advanced-details-data-param-1-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x24867...F563A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="advanced-details-data-param-2"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Id
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-42"
                class=""
                data-original-title="uint256"
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="advanced-details-data-param-2-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            47089...50823
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="advanced-details-data-param-3"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Amount
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-43"
                class=""
                data-original-title="uint256"
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="advanced-details-data-param-3-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="advanced-details-data-param-4"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Data
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-44"
                class=""
                data-original-title="bytes"
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="advanced-details-data-param-4-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            0x
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionData renders decoded data with names and descriptions 1`] = `<div />`;

exports[`TransactionData renders decoded data with no names 1`] = `<div />`;

exports[`TransactionData renders decoded data with tuples and arrays 1`] = `<div />`;

exports[`TransactionData renders nothing if no transaction data 1`] = `<div />`;

exports[`TransactionData renders raw hexadecimal if no decoded data 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="advanced-details-data-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 4px; top: 2px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--padding-right-6 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Data
          </p>
        </div>
      </div>
      <div
        class="mm-box"
      />
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Hex
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        data-testid="advanced-details-transaction-hex"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          0x123456
        </p>
      </div>
    </div>
  </div>
</div>
`;
